apps/demo/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-v2
  namespace: lab-demo
  labels:
    app: helloworld
    version: v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: helloworld
      version: v2
  template:
    metadata:
      labels:
        app: helloworld
        version: v2
    spec:
      containers:
        - name: helloworld
          image: docker.io/istio/examples-helloworld-v2
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              memory: 64Mi
          ports:
            - containerPort: 5000
